--- a/_gulp/_scss/1-base/_base.scss
+++ b/_gulp/_scss/1-base/_base.scss
@@ -28,6 +28,8 @@ body {
 .base {
   overflow: hidden;
   position: relative;
+  max-width: 1920px;
+  margin: 0 auto;
 }
 
 //  Typography
@@ -280,4 +282,9 @@ ol li {
   &--white {
     color: $color-white !important;
   }
+}
+
+.hidden {
+  display: none !important;
+  opacity: 0 !important;
 }
