--- a/_gulp/_scss/2-layout/_footer.scss
+++ b/_gulp/_scss/2-layout/_footer.scss
@@ -43,4 +43,13 @@
   &__logo {
     margin-left: 35px;
   }
+  &__nav {
+    ul {
+      li {
+        a {
+          padding-left: 0;
+        }
+      }
+    }
+  }
 }
