--- a/_gulp/_scss/4-utils/_media-queries.scss
+++ b/_gulp/_scss/4-utils/_media-queries.scss
@@ -317,8 +317,12 @@
   .footer {
     &__wrapper {
       flex-direction: column;
-      align-items: center;
+      text-align: left;
+      width: 230px;
+      margin: 0 auto;
       &>div {
+        padding-left: 0;
+        padding-right: 0;
         &+div {
           margin-top: 25px;
         }
@@ -329,7 +333,7 @@
       padding-bottom: 11px;
     }
     &__copyright {
-      text-align: center;
+      text-align: left;
       margin-right: 0;
     }
   }
@@ -408,7 +412,7 @@
       height: auto;
       &-head {
         margin-bottom: 15px;
-        padding-left: 18px;
+        // padding-left: 18px;
       }
       &-content {
         ul {
