--- a/_gulp/_pug/_include/_preloader.pug
+++ b/_gulp/_pug/_include/_preloader.pug
@@ -8,8 +8,8 @@ mixin formOnce
   .form-once
     .form-once__wrapper
       form(action="#!")
-        .form-once__head Индивидуальный урок вокала за 
-          strong 1 руб.
+        .form-once__head Индивидуальный урок вокала 
+          strong за 1 руб.
         fieldset
           .form-once__row1
             .div1
