--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -325,6 +325,13 @@ html(lang="ru")
                 a(href="#!" target="_blank")
                   b на нашем канале!
 
+            .video__more.--tiktok
+              a(href="#!" target="_blank")
+                img(src="./images/icon-tiktok.png", alt="")
+              span Короткие ролики  
+                a(href="#!" target="_blank")
+                  b в нашем TikTok!
+
         // Comments
         .section.comments
           .container
