--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -178,7 +178,7 @@
       max-width: 753px;
       line-height: 1;
       &.--even {
-        border-color: #ffe745;
+        border-color: #ffc045;
       }
     }
     &-answer {
