Auto stash before merge of "master" and "origin/master"

--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -297,6 +297,23 @@ html(lang="ru")
                 .school__img
                   img(data-src="./tmp/school-img.png", alt="").lazyload
 
+        // Directions
+        .section.directions
+          .container
+
+            .content__head.directions__head
+              h2 Направления
+
+            .directions__list
+              .directions__block
+                a(href="#!")
+                  span.directions__block-title Вокал
+                  img(src="./tmp/directions-img-1.png", alt="")
+              .directions__block.--guitar
+                a(href="#!")
+                  span.directions__block-title Гитара
+                  img(src="./tmp/directions-img-2.png", alt="")
+
         // Video
         .section.video
           .container
