--- a/_gulp/_pug/index-v2.pug
+++ b/_gulp/_pug/index-v2.pug
@@ -307,7 +307,7 @@ html(lang="ru")
                   img(src="./tmp/directions-img-2.png", alt="")
 
         // Comments
-        .section.comments
+        .section.comments.no--p-top
           .container
 
             .bg-img
