--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -307,7 +307,7 @@ html(lang="ru")
             .directions__list
               .directions__block
                 a(href="#!")
-                  span.directions__block-title Вокал
+                  span.directions__block-title(data-text="Вокал") Вокал
                   img(src="./tmp/directions-img-1.png", alt="")
               .directions__block.--guitar
                 a(href="#!")
