--- a/_gulp/_pug/index-v2.pug
+++ b/_gulp/_pug/index-v2.pug
@@ -97,9 +97,10 @@ html(lang="ru")
               h2 Занимайтесь с профессиональным преподавателем 
                 span.span на удобной платформе
 
-            .about__content.--v2
+            .about__content
               .first
                 img(src="./tmp/about-img-desktop-2.png", alt="")
+                img(src="./tmp/about-img-mobile-2.png", alt="")
               .last
                 .about__content-content
                   ul
@@ -112,21 +113,11 @@ html(lang="ru")
                       span.--color &nbsp;от 650р. 
 
             .about__faq.--v2
-              .about__faq-question В каком возрасте можно обучаться вокалу? 
+              .about__faq-question.is-active Эффективно ли обучаться игре на гитаре онлайн?
               .about__faq-answer
-                p Другой вопрос, что можно петь просто для собственного удовольствия, а можно начать заниматься профессионально, а это уже совершенно другие нагрузки на связки. И если делать это с самого раннего детства то только под руководством опытного педагога, который имеет большой опыт и практику работы именно с маленькими детьми. А также положительные отзывы и здоровые голоса учеников. 
-              .about__faq-question.--even У меня нет слуха и голоса, можно ли обучиться вокалу? 
-              .about__faq-answer
-                p А если Вам далеко уже за... то это не должно Вас смущать и если хочется петь - нужно это делать. заниматься под чутким руководством педагога, выполнять рекомендации и все обязательно получится. Ведь голос не стареет, если не подвергать его воздействию курения и алкоголя. Голос - это Ваша вечная молодость! 
-              .about__faq-question Мне не нравиться свой голос, можно ли это преодолеть? 
-              .about__faq-answer
-                p Все очень индивидуально. Если есть явный талант и сильный голос, то конечно, глупо ждать какого-то возраста, чтоб начать активно заниматься. Нужно петь, нужно учиться и продвигать себя. Добиваться поставленных целей. но делать это аккуратно, не перенапрягать связки. 
-              .about__faq-question.--even Сколько времени потребуется, чтобы поставить голос? 
-              .about__faq-answer
-                p Все очень индивидуально. Если есть явный талант и сильный голос, то конечно, глупо ждать какого-то возраста, чтоб начать активно заниматься. Нужно петь, нужно учиться и продвигать себя. Добиваться поставленных целей. но делать это аккуратно, не перенапрягать связки. 
-              .about__faq-question Эффективно ли заниматься онлайн? 
-              .about__faq-answer
-                p Все очень индивидуально. Если есть явный талант и сильный голос, то конечно, глупо ждать какого-то возраста, чтоб начать активно заниматься. Нужно петь, нужно учиться и продвигать себя. Добиваться поставленных целей. но делать это аккуратно, не перенапрягать связки.
+                p Эффективно! Онлайн заниматься можно и нужно, но есть свои нюансы. Главное — наблюдайте за собой. Если у вас происходят изменения, даже если было всего два или три урока, тогда обязательно продолжайте учиться!
+                p Если чувствуете, что не меняетесь и ничего не происходит, нет новых ощущений — тогда нужно попробовать заниматься с другим преподавателем или выбрать другой способ обучения.
+                p Нужен только интернет и гитара.
 
             +formOnce
 
@@ -299,7 +290,7 @@ html(lang="ru")
             .directions__list
               .directions__block
                 a(href="#!")
-                  span.directions__block-title Вокал
+                  span.directions__block-title(data-text="Вокал") Вокал
                   img(src="./tmp/directions-img-1.png", alt="")
               .directions__block.--guitar
                 a(href="#!")
