добавлен подарочный сертификат

--- a/_gulp/_pug/_include/_preloader.pug
+++ b/_gulp/_pug/_include/_preloader.pug
@@ -51,3 +51,10 @@ mixin formOnce
               button(type="submit").btn.btn--yellow.btn--block Хочу петь!
               .form-info Оставляя заявку, вы принимаете 
                 a(href="#!" target="_blank") условия соглашения
+
+mixin cost_sertificate
+  .cost__certificate
+    a(href="#!" target="_blank").cost__certificate-block
+      img(src="./tmp/img-certificate.png", alt="")
+      span Купить занятия
+        b.--color в подарок
