--- a/_gulp/_pug/index-v2.pug
+++ b/_gulp/_pug/index-v2.pug
@@ -242,6 +242,9 @@ html(lang="ru")
                         i.icon-dollar
                         | /урок 
 
+            // Подарочный сертификат
+            +cost_sertificate
+
         // School
         .section.school.--v2
           .container
