--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -258,6 +258,8 @@ html(lang="ru")
                         i.icon-dollar
                         | /урок 
 
+            // Подарочный сертификат
+            +cost_sertificate
 
         // School
         .section.school
