--- a/_gulp/_scss/4-utils/_media-queries.scss
+++ b/_gulp/_scss/4-utils/_media-queries.scss
@@ -108,6 +108,19 @@
         padding-right: 35px;
       }
     }
+    &__certificate {
+      margin-top: 80px;
+      &-block {
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        font-size: 30px;
+        line-height: 1.4;
+        img {
+          margin: 0 0 25px 0;
+        }
+      }
+    }
   }
   .header {
     margin-top: 20px;
