--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -167,6 +167,18 @@
     .h2, h2 {
       margin-bottom: 95px;
     }
+    .--v3 & {
+      max-width: 840px;
+      margin-left: auto;
+      margin-right: auto;
+      .h2, h2 {
+        font-size: 58px;
+        margin-bottom: 200px;
+      }
+      .--color {
+        color: #e11b1b;
+      }
+    }
   }
   &__faq {
     max-width: 910px;
@@ -260,6 +272,9 @@
         &[src*="mobile"] {
           display: none;
         }
+        &[src*="crown"] {
+          margin: -70px auto 20px;
+        }
       }
     }
     .last {
@@ -297,6 +312,24 @@
         }
       }
     }
+    .--v3 & {
+      margin-bottom: 0;
+    }
+  }
+  &__gift {
+    margin-bottom: 105px;
+    img {
+      display: block;
+      margin: 0 auto;
+      max-width: 100%;
+      &[src*="mobile"] {
+        display: none;
+      }
+    }
+  }
+  &.--v3 {
+    padding-top: 300px;
+    background: transparent;
   }
 }
 
@@ -780,11 +813,18 @@
     display: flex;
     justify-content: center;
     margin: 0 -14px;
+    .--v3 & {
+      flex-wrap: wrap;
+    }
   }
   &__block {
     margin: 0 7px;
     width: calc(25% - 14px);
     text-align: center;
+    .--v3 & {
+      width: calc(33.3% - 14px);
+      margin-bottom: 45px;
+    }
     &-title {
       font-size: 27px;
       line-height: 1;
@@ -832,6 +872,29 @@
           margin-top: 10px;
         }
       }
+      .--v3 & {
+        height: 190px;
+        min-height: inherit;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        .div1 {
+          height: 57px;
+          line-height: 57px;
+          margin-bottom: 12px;
+          font-size: 30px;
+          .icon-rouble {
+            font-size: 26px;
+          }
+        }
+        .div2 {
+          height: 57px;
+          line-height: 57px;
+          font-size: 22px;
+          .icon-rouble {
+            font-size: 18px;
+          }
+        }
+      }
     }
   }
   &__certificate {
@@ -858,6 +921,9 @@
         color: #df1c1c;
       }
     }
+  }
+  &.--v3 {
+    padding-bottom: 0;
   }
 }
 
@@ -928,6 +994,211 @@
     &:hover {
       img {
         transform: translateY(-5px);
+      }
+    }
+  }
+}
+
+.direction {
+  &__wrapper {
+    max-width: 810px;
+    margin: 0 auto;
+  }
+  &__one {
+    margin-bottom: 210px;
+    &-head {
+      font-size: 44px;
+      display: flex;
+      align-items: center;
+      margin-bottom: 70px;
+      font-weight: 800;
+      img {
+        flex-shrink: 0;
+        margin-right: 35px;
+      }
+      div {
+        line-height: 1.1;
+      }
+    }
+    &-btn {
+      display: flex;
+      button {
+        font-size: 28px;
+        font-weight: 600;
+        height: 77px;
+        padding: 0 20px;
+        border-radius: 25px;
+        text-align: center;
+        min-width: 208px;
+        color: #fff;
+        background: linear-gradient(to bottom, #940101, #e10b0a);
+        white-space: nowrap;
+        border: 0;
+        margin-bottom: 27px;
+        &+button {
+          margin-left: 32px;
+        }
+        &.active {
+          border: 3px solid #fff880;
+          background: linear-gradient(to bottom, #ffef01, #facd22);
+          color: $primary-color;
+        }
+      }
+    }
+  }
+  &__two {
+    margin-bottom: 250px;
+    &-head {
+      font-size: 44px;
+      display: flex;
+      align-items: center;
+      margin-bottom: 40px;
+      font-weight: 800;
+      img {
+        flex-shrink: 0;
+        margin-right: 35px;
+      }
+      div {
+        line-height: 1.1;
+      }
+    }
+  }
+  &__three {
+    margin-bottom: 220px;
+    &-head {
+      font-size: 44px;
+      display: flex;
+      align-items: center;
+      margin-bottom: 70px;
+      font-weight: 800;
+      img {
+        flex-shrink: 0;
+        margin-right: 35px;
+      }
+      div {
+        line-height: 1.1;
+      }
+    }
+  }
+  &__form {
+    &-wrapper {
+      background: #ffed79;
+      border: 10px solid #ffde65;
+      padding: 55px 100px 55px 120px;
+      .form-group {
+        margin-bottom: 50px;
+        position: relative;
+        label {
+          font-size: 30px;
+          margin-bottom: 10px;
+        }
+        .input-shadow {
+          border: 6px solid #fff;
+          position: absolute;
+          height: 76px;
+          width: 100%;
+          margin-top: -61px;
+          margin-left: -14px;
+          z-index: 1;
+        }
+      }
+      .form-control {
+        height: 76px;
+        border-radius: 0;
+        border: 1px solid #c4c4c4;
+        font-size: 25px;
+        padding-left: 35px;
+        position: relative;
+        z-index: 5;
+        &~.info {
+          display: block;
+          font-size: 20px;
+          margin-left: 25px;
+          margin-top: 23px;
+          position: relative;
+          z-index: 5;
+          margin-bottom: -25px;
+        }
+      }
+    }
+    &-btn {
+      width: 100%;
+      max-width: 486px;
+      height: 114px;
+      border: 3px solid #ae0404;
+      background: linear-gradient(to bottom, #960101, #e00a0b);
+      color: #fff;
+      text-align: center;
+      font-size: 27px;
+      font-weight: 500;
+      margin: -66px auto 15px;
+      display: block;
+      border-radius: 25px;
+    }
+    &-info {
+      text-align: center;
+      font-size: 12px;
+    }
+  }
+}
+
+.how-present {
+  &__wrapper {
+    max-width: 810px;
+    margin: 0 auto;
+  }
+  &__head {
+    margin-bottom: 93px;
+    position: relative;
+    min-height: 43px;
+    border: 7px solid #ffde65;
+    border-top: 0;
+    display: flex;
+    font-size: 40px;
+    text-align: center;
+    font-weight: 800;
+    div {
+      padding: 0 18px;
+      flex-grow: 1;
+      white-space: nowrap;
+      line-height: 1.3;
+      padding-bottom: 5px;
+      margin-top: -25px;
+    }
+    &::before, &::after {
+      content: '';
+      position: relative;
+      flex-shrink: 0;
+      height: 7px;
+      width: 83px;
+      background: #ffde65;
+    }
+  }
+  &__body {
+    display: flex;
+    &>div {
+      &.div1 {
+        margin-right: 50px;
+        flex-shrink: 0;
+      }
+      &.div2 {
+        flex-grow: 1;
+        padding-top: 28px;
+      }
+    }
+  }
+  &__list {
+    padding-left: 0;
+    font-size: 23px;
+    li {
+      list-style: none;
+      position: relative;
+      padding-left: 62px;
+      margin: 0 0 45px 0;
+      img {
+        position: absolute;
+        left: 0;
+        top: 0;
       }
     }
   }
