--- a/_gulp/_scss/1-base/_base.scss
+++ b/_gulp/_scss/1-base/_base.scss
@@ -32,6 +32,12 @@ body {
   margin: 0 auto;
   box-shadow: 0 0 20px rgba(0,0,0,.1);
   background: #fafafa;
+  &.--v3 {
+    background-image: url('../images/bg-v3.png');
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-color: $color-white;
+  }
 }
 
 //  Typography
