--- a/_gulp/_scss/4-utils/_media-queries.scss
+++ b/_gulp/_scss/4-utils/_media-queries.scss
@@ -106,6 +106,10 @@
       &-content {
         padding-left: 35px;
         padding-right: 35px;
+        .--v3 & {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
       }
     }
     &__certificate {
@@ -129,6 +133,9 @@
     }
     &__whatsapp {
       font-size: 15px;
+    }
+    &.--v3 {
+      height: 100px;
     }
   }
   .h1, h1 {
@@ -190,6 +197,11 @@
       .h2, h2 {
         margin-bottom: 50px;
       }
+      .--v3 & {
+        h2, .h2 {
+          font-size: 36px;
+        }
+      }
     }
     &__faq {
       margin-bottom: 50px;
@@ -228,6 +240,9 @@
           padding-left: 0;
         }
       }
+    }
+    &__gift {
+      margin-bottom: 80px;
     }
   }
   .form-once {
@@ -447,6 +462,46 @@
       }
     }
   }
+  .direction {
+    &__one {
+      margin-bottom: 150px;
+      &-btn {
+        flex-wrap: wrap;
+        justify-content: center;
+        button {
+          height: 50px;
+          border-radius: 10px;
+          font-size: 18px;
+          min-width: 133px;
+          &+button {
+            margin-left: 16px;
+          }
+        }
+      }
+      &-head {
+        margin-bottom: 45px;
+      }
+    }
+    &__two {
+      margin-bottom: 150px;
+    }
+    &__three {
+      margin-bottom: 150px;
+    }
+  }
+  .how-present {
+    &__head {
+      font-size: 26px;
+      &::before, &::after {
+        width: 34px;
+      }
+      div {
+        white-space: normal;
+        padding: 0 0 10px 0;
+        margin-top: -15px;
+      }
+    }
+  }
 }
 
 @media (max-width: 767px) {
@@ -489,6 +544,9 @@
       position: relative;
       right: auto;
       top: auto;
+    }
+    &.--v3 {
+      height: 80px;
     }
   }
   .main-section {
@@ -603,6 +661,26 @@
         padding-left: 0;
         padding-top: 35px;
       }
+    }
+    &__gift {
+      img {
+        &[src*="desktop"] {
+          display: none;
+        }
+        &[src*="mobile"] {
+          display: block;
+        }
+      }
+    }
+    &__head {
+      .--v3 & {
+        h2, .h2 {
+          font-size: 25px;
+        }
+      }
+    }
+    &.--v3 {
+      padding-top: 175px;
     }
   }
   .bg-img {
@@ -770,11 +848,10 @@
     .nav-tabs {
       margin-bottom: 25px;
     }
-    .nav-link {
-      // height: 35px;
-      // line-height: 35px;
-      // width: 35px;
-      // font-size: 20px;
+    &__block {
+      .--v3 & {
+        width: calc(50% - 14px);
+      }
     }
   }
   .directions {
@@ -785,6 +862,70 @@
       &.--guitar {
         margin-top: 122px;
         margin-left: 0;
+      }
+    }
+  }
+  .direction {
+    &__one, &__two, &__three {
+      margin-bottom: 100px;
+      &-head {
+        font-size: 31px;
+        img {
+          width: 62px;
+        }
+      }
+    }
+    &__form {
+      &-wrapper {
+        padding: 30px 20px;
+        .form-control {
+          height: 40px;
+          font-size: 13px;
+          padding-left: 18px;
+          &~.info {
+            font-size: 11px;
+            margin-left: 10px;
+            margin-top: 12px;
+          }
+        }
+        .form-group {
+          margin-bottom: 25px;
+          label {
+            line-height: 1;
+            font-size: 15px;
+          }
+          .input-shadow {
+            height: 40px;
+            margin-left: -7px;
+            border-width: 3px;
+            margin-top: -31px;
+          }
+        }
+      }
+      &-btn {
+        height: 57px;
+        max-width: 246px;
+        font-size: 14px;
+        margin-top: -33px;
+      }
+      &-info {
+        font-size: 10px;
+      }
+    }
+  }
+  .how-present {
+    &__body {
+      flex-direction: column;
+      &>div {
+        &.div1 {
+          margin-right: 0;
+          margin-bottom: 100px;
+          img {
+            width: 277px;
+            margin: 0 auto;
+            display: block;
+          }
+        }
       }
     }
   }
@@ -865,7 +1006,32 @@
             font-size: 16px;
           }
         }
+        .--v3 & {
+          height: 158px;
+          padding-left: 10px;
+          padding-right: 10px;
+          .div1 {
+            height: 43px;
+            line-height: 43px;
+            font-size: 18px;
+            .icon-rouble {
+              font-size: 16px;
+            }
+          }
+          .div2 {
+            height: 43px;
+            line-height: 43px;
+            font-size: 14px;
+            .icon-rouble {
+              font-size: 12px;
+            }
+          }
+        }
       }
+      
     }
+  }
+  .direction__one-head, .direction__three-head, .direction__two-head {
+    font-size: 28px;
   }
 }
