--- a/_gulp/_pug/index-v3.pug
+++ b/_gulp/_pug/index-v3.pug
@@ -20,7 +20,7 @@ html(lang="ru")
 
         // Bg-top
         .container
-          .bg-img
+          .bg-img.--v3
             .bg-img__wrapper
               img(data-src="./images/img-block1-left.png", alt="").bg-img__img.bg-img__img--top-left.lazyload
               img(data-src="./images/img-block1-right.png", alt="").bg-img__img.bg-img__img--top-right.lazyload
@@ -250,6 +250,8 @@ html(lang="ru")
                     li
                       img(src="./tmp/img-direction-3.png", alt="" width="38")
                       div После получения, ваш друг активирует сертификат самостоятельно по инструкции
+
+              a(href="#!").how-present__btn Купить сертификат
 
       include ./_include/_footer
       //- div(style="height: 1000px; background-color: #000")
