--- a/_gulp/_scss/4-utils/_media-queries.scss
+++ b/_gulp/_scss/4-utils/_media-queries.scss
@@ -661,6 +661,9 @@
         padding-left: 0;
         padding-top: 35px;
       }
+      .first img[src*=crown] {
+        width: 100px;
+      }
     }
     &__gift {
       img {
@@ -680,7 +683,7 @@
       }
     }
     &.--v3 {
-      padding-top: 175px;
+      padding-top: 85px;
     }
   }
   .bg-img {
@@ -916,6 +919,7 @@
   .how-present {
     &__body {
       flex-direction: column;
+      margin-bottom: 20px;
       &>div {
         &.div1 {
           margin-right: 0;
@@ -927,6 +931,12 @@
           }
         }
       }
+    }
+    &__btn {
+      width: 310px;
+      height: 72px;
+      line-height: 70px;
+      font-size: 18px;
     }
   }
 }
@@ -978,6 +988,9 @@
   .cost {
     &__block {
       font-size: 12px;
+      .--v3 & {
+        margin-bottom: 25px;
+      }
       &-title {
         font-size: 16px;
         margin-bottom: 5px;
@@ -1008,8 +1021,6 @@
         }
         .--v3 & {
           height: 158px;
-          padding-left: 10px;
-          padding-right: 10px;
           .div1 {
             height: 43px;
             line-height: 43px;
