--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -1137,6 +1137,16 @@
       margin: -66px auto 15px;
       display: block;
       border-radius: 25px;
+      opacity: 1;
+      transition: all 0.15s;
+      top: 0px;
+      position: relative;
+      &:hover, &:focus {
+        color: $color-white;
+      }
+      &:active {
+        top: 2px;
+      }
     }
     &-info {
       text-align: center;
@@ -1221,9 +1231,15 @@
     display: block;
     border-radius: 25px;
     text-decoration: none;
+    opacity: 1;
+    transition: all 0.15s;
+    top: 0;
+    position: relative;
     &:hover, &:focus {
-      text-decoration: underline;
       color: $color-white;
+    }
+    &:active {
+      top: 2px;
     }
   }
 }
