--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -21,6 +21,9 @@
     .is-scroll & {
       height: 67px;
     }
+    .--v3 & {
+      height: 60px;
+    }
   }
   &-holder {
     height: 107px;
@@ -65,7 +68,7 @@
   }
   &.--v3 {
     background: url('../images/header.png') bottom center repeat-x;
-    height: 127px;
+    height: 80px;
     margin-top: 0;
     padding-top: 10px;
   }
